--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,15 @@
         <version>1.18.36</version>
         <scope>provided</scope>
     </dependency>
+<!--    <dependency>-->
+<!--        <groupId>io.springfox</groupId>-->
+<!--        <artifactId>springfox-boot-starter</artifactId>-->
+<!--        <version>3.0.0</version>-->
+<!--    </dependency>-->
     <dependency>
-        <groupId>io.springfox</groupId>
-        <artifactId>springfox-boot-starter</artifactId>
-        <version>3.0.0</version>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        <version>2.5.0</version>
     </dependency>
     <dependency>
         <groupId>javax.servlet</groupId>
