--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-### Maven
+### Maven ###
 target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/
+*.iml
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
@@ -32,3 +34,24 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### Logs ###
+*.log
+
+### Temporary files ###
+*.tmp
+*.swp
+*.swo
+
+### Compiled classes ###
+*.class
+
+### Package files ###
+*.jar
+*.war
+*.ear
+
+### OS generated files ###
+Thumbs.db
+ehthumbs.db
+Desktop.ini
